css/styles.css
body { background-image: url("../images/black.jpg"); }

#page-wrapper { width: 960px;
margin: 0 auto;
box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
border-radius: 12px 12px 0px 0px; }

#header {
  position: relative;
  margin-top: 40px;
  border-radius: 12px 12px 0px 0px; 
}

#header h1 {
	position: absolute;
	left: 420px;
	top:5px;
  font-size: 3em;
	font-family: 'Devonshire', cursive;
  color: #E35335;
}
------------------------------------------------

#header a#logo1 img

#header #toplink

#footer { 
margin-top: 20px;
margin-left: 20px;
margin-bottom: 20px;
}

#content-wrapper { background-image: url("../images/repeating.png");
float: left;}

#main-content  

h2 strong { font-size: 2em;
font-weight: 900;}

.image-r {
	float: right;
	border: 2px solid blue;
  width: 300px;
	padding: 5px;
	background-color: white;
	margin: 10px 0 10px 20px;
}

#side-content

#main-nav 

#main-nav ul 
#main-nav ul li

